syntax = "proto3";

option csharp_namespace = "cst_back.Services";

package auth;

service Auth {
  rpc CreateAccount (CreateRequest) returns (CreateResponse);
}

message CreateRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string confPassword = 4;
}

message CreateResponse {
  string id = 1;
}
