syntax = "proto3";

option csharp_namespace = "cst_back.Services";

package auth;

service Auth {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse);
  rpc Connect (ConnectRequest) returns (ConnectResponse);
}

message CreateAccountRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string confPassword = 4;
}

message CreateAccountResponse {
  int32 id = 1;
}

message ConnectRequest {
	string username = 1;
	string password = 2;
}

message ConnectResponse {
	int32 id = 1;
}